--- a/src/components/UsedImgCard/style.css
+++ b/src/components/UsedImgCard/style.css
@@ -5,10 +5,10 @@
 }
 
 .used-img-wrapper {
-  flex-basis: 30%;
+  flex-basis: 32.6%;
   height: 195px;
-  margin-right: 5px;
   position: relative;
+  margin: 0 8px 8px 0;
 }
 
 .utilities-wrapper {
